horizontal scroll fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -938,6 +938,12 @@
   .jackpot__image {
     height: 100%;
     position: relative; }
+    @media (max-width: 1200px) {
+      .jackpot__image {
+        position: absolute;
+        right: 0;
+        bottom: 0;
+        height: 275px; } }
 
 .last-winners {
   padding: 80px 0;
@@ -1001,6 +1007,9 @@
     background-color: #424242; }
   .winners__text {
     width: 200px; }
+    @media (max-width: 992px) {
+      .winners__text {
+        width: auto; } }
   .winners__name {
     display: block;
     margin-bottom: 10px;
@@ -5079,3 +5088,7 @@ form * {
       .header .navbar-search .search-query {
         width: 100%;
         color: #000; } }
+
+@media (max-width: 992px) {
+  .registration-bonus-pers {
+    display: none; } }
